# CudaRaytracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  premake5.lua
CudaRaytracer/src/: main.cu  ray.h  vec3.h
CudaRaytracer/src/core/: cudaInit.h  screen.h  windowInit.h
CudaRaytracer/src/opengl/: screen.cu  screen.h  windowInit.cu  windowInit.h
CudaRaytracer/src/render/: camera.cu  camera.h  hittable.h  hittableList.cu  hittableList.h  materials.cu  materials.h  ray.h  render.cu  render.h  sphere.cu  sphere.h
CudaRaytracer/src/utils/: timer.h  utils.cu  utils.h  vec3.h
ext/glad/: CMakeLists.txt  glad.c
ext/glad/include/glad/: glad.h
